# ACEKV

./: .gitignore  README.md
ACEKV&MICA/data/ACEKV/cuckoo_path/: drawfor.py  drawforbar.py
ACEKV&MICA/data/ACEKV/latency_cdf/: latency.sh
ACEKV&MICA/data/ACEKV/loadfactor/: drawplus.sh
ACEKV&MICA/data/ACEKV/memc3_log/: drawfor.py
ACEKV&MICA/data/ACEKV/threshold_plot/: drawforbaru.py  drawforbarz.py  drawforu.py  drawforz.py  drawplus.sh
ACEKV&MICA/data/ACEKV/threshold_table/: mkdir.sh
ACEKV&MICA/data/tools/: draw.py  insert_mica_evict.py  tput_mean.py
ACEKV&MICA/data/tools/tput/: cp.sh
ACEKV&MICA/data/tools/worktable/: drawfor.py  drawplus.sh
ACEKV&MICA/src/: basic_hash.h  communication.cc  communication.h  hashtable.h  main.cc  operation.cc  piekv.h  util.h
ACEKV(proto)/: CMakeLists.txt
ACEKV(proto)/src/: communication.cc  communication.h  hash.h  hashtable.cc  hashtable.h  log.h  operation.cc
ACEKV(proto)/util/: config.cpp
Client/: .gitignore  Makefile  Makefile.bk  README.md  benchmark.h  client.c  client.cpp  common.h  dummy-server.c  go.sh  server.c  zipf.h
Client/cityhash/: city_mod.cpp
Client/directory/: directory_client.cpp  directory_client.h  etcd_client.h
Client/directory/etcdcpp/: etcd_mod.cpp
Client/shells/: go_100p.sh  go_100p_1usleep.sh  go_100p_20usleep.sh  go_100p_600usleep.sh  go_120p_20usleep.sh
Memc3/: CMakeLists.txt
Memc3/data/: insert-test.sh  insert_test.py
Memc3/data/memc3/: 08-09_17-00-48_mc3u.csv  08-09_17-14-53_mc3u_en.csv  08-25_17-48-54_pu_d600_p100.csv  08-26_16-22-25_cu595_tput.csv  08-26_16-32-04_cz595_tput.csv  08-26_17-11-11_cu_tput.csv  08-26_17-25-33_cz_tput.csv  08-26_17-32-47_cu_tput.csv  09-11_14-58-33_tput_cz.csv  09-11_15-00-49_tput_cu.csv  09-11_15-05-53_tput_cz.csv  09-11_15-15-09_tput_cu.csv  09-11_15-39-19_tput_cu.csv  09-11_15-48-40_tput_cz.csv  09-11_15-58-27_tput_cz.csv  09-11_16-15-58_cz.csv  09-11_16-26-52_cz.csv  09-11_16-37-53_cz_hit.csv  09-11_17-03-15_cz_hit.csv  09-11_17-22-52_cu_hit.csv  09-12_11-36-08_cu_hit.csv  09-12_12-13-20_cz_hit.csv  09-12_13-50-43_cu_hit.csv  10-13_09-31-00_-p.csv  10-13_11-34-05_p.csv  10-13_11-38-47_p.csv  10-13_15-56-12_key.csv  10-13_15-58-18_old_key.csv  10-13_16-00-28_old_key.csv  10-16_09-11-50_memcthree_pz.csv  10-16_09-26-20_memcthree_pz_33_SIGLE.csv
Memc3/data/memc3/50s50u/: 07-09_13-36-00_u700.csv  07-09_13-40-06_u700.csv  07-09_13-44-41_u100.csv  07-09_15-24-52_u200.csv  draw.sh  drawfor50s50u200s.py
Memc3/data/memc3/50s50z99/: 07-09_13-46-10_z100.csv  07-09_13-47-20_z200.csv  200.csv  400.csv  700.csv  draw.sh  drawfor50s50z300s.py
Memc3/shelltools/: remoteElasticity_c.sh  remoteElasticity_lf.sh
Memc3/src/: assoc_cuckoo.cc  assoc_cuckoo.h  basic_hash.cc  basic_hash.h  cached.cc  communication.cc  communication.h  hash.cc  items.cc  items.h  main.cc  memc3_util.h  memcached.cc  memcached.h  mempool.cc  mempool.h  operation.cc  piekv.h  slabs.cc  stats.cc  stats.h  thread.cc  util.h  zipf.h
ProtoKV/: environment.sh
ProtoKV/src/: basic_hash.cc  basic_hash.h  cuckoo.cc  cuckoo.h  flowing_controller.cc  hash.cc  log.cc  main.cc  mempool.cc  mempool.h  piekv.h  roundhash.cc  roundhash.h
ProtoKV/util/: config.h
proto-mica/: CMakeLists.txt  explog  go
proto-mica/data/: insert-test.sh
proto-mica/data/MscGP_output/: rename_fig.sh
proto-mica/data/mica/50s50u/: drawfor50s50u.py
proto-mica/data/mica/50s50z/: 08-24_19-28-29_counter50.csv  drawfor50s50z120s.py  drawfor50s50z80s.py
proto-mica/data/mica/50u50u/: draw.sh  drawfor50u50u.py  mica.csv  proto.csv
proto-mica/data/mica/50z50z/: draw.sh  drawfor50z50z.py  mica.csv  proto.csv
proto-mica/data/mica/5s95z/newest/: mica.csv  (+2 more)
proto-mica/data/mica/kvsize/: drawforkvsizem.py  drawforkvsizep.py
proto-mica/data/mica/log_change/: draw.sh  drawforlog.py  mica_1G.csv  proto_1G.csv
proto-mica/data/smartKV/cuckoo_path/: draw.sh  drawbar.sh  insert_test_for_lfbkt.py
proto-mica/data/smartKV/hitrate/: mean.sh
proto-mica/data/smartKV/latency_cdf/: MICA-t.csv  MemC3-t.csv  draw.sh  drawfor.py
proto-mica/data/smartKV/loadfactor/: drawfor.py
proto-mica/data/smartKV/memc3_log/: drawplus.sh
proto-mica/data/tools/: cp_last_mean.py  draw.sh  ghr_last_mean.py  insert_test.py  insert_test_latency.py  insert_test_memc3lf.py  insert_test_refine.py  mm.sh  rename_abbr.sh  rename_fig.sh  rename_full.sh  test_draw.py
proto-mica/shelltools/: remoteElasticity_ghr.sh  remoteElasticity_th.sh
proto-mica/src/: basic_hash.cc  basic_hash.h  cuckoo.cc  cuckoo.h  hashtable.cc  log.cc  log.h  mempool.h  operation.cc
(+1014 files in other folders)
